--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "version": 2,
-    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "app.js" }]
-  }
-  
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/routes/root.js"
+        }
+    ]
+}
